# tenplestay

./: .gitignore  README.md
backend/: .env-sample  pyproject.toml  requirements.txt  run-kill.sh  run-test.sh  run.sh
backend/apps/accounts/: adapter.py  admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_options_user_phone_number.py
backend/apps/accounts/tests/: test_admin.py  test_models.py  test_views.py
backend/apps/notifications/: admin.py  models.py  serializers.py
backend/apps/notifications/migrations/: 0001_initial.py  0002_alter_noti_main_noti_platform_and_more.py  0003_noti_is_error.py  0004_rename_is_error_noti_is_send.py  0005_alter_noti_options_notisendlog.py  0006_alter_notisendlog_result.py  0007_alter_notiplatform_options.py
backend/apps/scraping/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/scraping/migrations/: 0001_initial.py  0002_scrapingurl_main_noti_platform_and_more.py  0003_scrapingurl_is_activate.py  0004_alter_scrapingurl_last_scraping_log_and_more.py  0005_alter_scrapinggroup_options_and_more.py  0006_scrapingurl_website_favicon_scrapingurl_website_name.py  0007_alter_scrapingurl_website_favicon.py
backend/config/: urls.py
backend/config/settings/: base.py  dev.py  prod.py
backend/docker/: docker-run.sh  grid-sel-compose.yaml
backend/middleware/: response.py
backend/templates/: 404.html  500.html  log_template.html
backend/templates/admin/: index.html
backend/utils/: base_modle.py  messagin_cool_sms.py  messaging_module.py  paginations.py  retry_session.py  tests.py  token_auth.py  util_views.py  utils.py
backend/worker/: logger.py  messaging.py  scraping.py  scrapping-sel.py  scrapping.py
backend/worker/src/: db.py
frontend/: .env-sample  .eslintrc.cjs  .prettierrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+44 files in other folders)
